syntax = "proto3";

package redirect;

option go_package = "shared/proto/redirectpb";

service RedirectService {
   rpc GetLongURL (GetLongURLRequest) returns (GetLongURLResponse);
}

message GetLongURLRequest {
   string short_code = 1;
}

message GetLongURLResponse {
   string long_url = 1;
}